--- a/Project_Manager/frontend/index.html
+++ b/Project_Manager/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-zinc-900">
-    <div id="root" class="bg-black"></div>
+    <div id="root" class="bg-black h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
